manifests/bleeding-edge/cilium/network-policies/rust-store-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rust-store-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: rust-data-store
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: go-api-gateway
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
